[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29"
vulkano-shaders = "0.29"
vulkano-win = "0.29"
winit = "0.26"
bytemuck = "1"
cgmath = "0.18"
png = "0.17"