[package]
name = "rust-vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29"
vulkano-shaders = "0.29"
vulkano-win = "0.29"
# https://github.com/rust-windowing/winit/pull/2263
winit = { git = "https://github.com/rust-windowing/winit" }
bytemuck = "1"
png = "0.17"
nalgebra = "0.31"
rand = "0.8"